Fix VideoReceiverHandle drop bug and add rebuild scripts
- app.rs: Store VideoReceiverHandle in MirrorApp to prevent immediate drop
- stream.rs: Increase read timeout from 5s to 30s for stability
- package.json: Add clean:android, clean:host, clean:all, tauri:rebuild scripts

--- a/nl-launcher/package.json
+++ b/nl-launcher/package.json
@@ -10,7 +10,11 @@
     "buildMacArm64": "sh scripts/update-binaries.sh && tauri build --target aarch64-apple-darwin",
     "preview": "vite preview",
     "tauri": "sh scripts/update-binaries.sh && tauri",
-    "release": "node ../scripts/release.js"
+    "release": "node ../scripts/release.js",
+    "clean:android": "cd ../nl-android && ./gradlew clean && rm -f ../nl-launcher/src-tauri/binaries/nl-mirror.apk",
+    "clean:host": "cd ../nl-host && cargo clean && rm -f ../nl-launcher/src-tauri/binaries/nl-host-*",
+    "clean:all": "yarn clean:android && yarn clean:host",
+    "tauri:rebuild": "yarn clean:all && yarn tauri dev"
   },
   "dependencies": {
     "@radix-ui/react-select": "^2.2.6",
